--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -100,9 +100,9 @@
             </div>
           </div>
 
-          <!-- <div class="card class_card" id="online">
-            <img class="card-img-top classes_images" src="/images/iconfinder_online_course_teaching-study-class-learning_5867932.png"
-              alt="Card image cap">
+          <div class="card class_card" id="online">
+            <img class="card-img-top classes_images"
+              src="/images/iconfinder_online_course_teaching-study-class-learning_5867932.png" alt="Card image cap">
             <div class="card-body">
               <h3>Online Driver Improvement Class</h3>
               <p>ADJ Driver Improvement Center in Woodbridge, Virginia offers a convenient online Driver Improvement
@@ -124,7 +124,6 @@
                 online completions at this time.</p>
               <p>If you do not pass your final exam, DMV requires a 24 wait until you may test again. There are no
                 additional fees for re-testing.</p> -->
-          <!-- 
 
 
               <p>Pay attention and study up! Exams are NOT open book.</p>
@@ -135,12 +134,12 @@
               <p><em>If you are under age 20, this computer-based Driver Improvement Clinic WILL NOT satisfy a Driver
                   Improvement Clinic requirement.</em></p>
               <p><em>You must satisfactorily complete a clinic that provides classroom instruction.</em></p> -->
-          <!-- <br>
+              <!-- <br>
               <div>
                 <h2 class="calendar"><a href="https://www.va-drivercourses.com/clickIn.php?school=59">Start Now</a></h2>
               </div>
             </div>
-          </div> -->
+          </div>
 
           <div class="card class_card" id="3-times">
             <img class="card-img-top classes_images" src="/images/driver-manual-icon.png" alt="Card image cap">
@@ -227,9 +226,9 @@
               </div>
 
             </div>
-          </div>
+          </div> -->
 
-          <!-- <div class="card class_card" id="reckless">
+              <!-- <div class="card class_card" id="reckless">
             <img class="card-img-top classes_images" src="/images/iconfinder_stress-bomb-pressure-strain-mad_4383933.png"
               alt="Card image cap">
             <div class="card-body">
@@ -261,129 +260,144 @@
             </div>
           </div> -->
 
-          <div class="card class_card" id="espanol">
-            <img class="card-img-top classes_images" src="/images/iconfinder_83_4863661.png" alt="Card image cap">
-            <div class="card-body">
-              <h3>Clases en Español</h3>
-              <p> Por clases en español por favor llama al número
-              <p><a href="tel:+15712851521">
-                  <label class="label_no_padding">571 285-1521</label>
-                </a>
-              </p>
+              <div class="card class_card" id="espanol">
+                <img class="card-img-top classes_images" src="/images/iconfinder_83_4863661.png" alt="Card image cap">
+                <div class="card-body">
+                  <h3>Clases en Español</h3>
+                  <p> Por clases en español por favor llama al número
+                  <p><a href="tel:+15712851521">
+                      <label class="label_no_padding">571 285-1521</label>
+                    </a>
+                  </p>
 
-              <p>La Escula de Manejo ADJ en Woodbridge ofrece todas las clases para ayudar a las personas con el
-                proceso de concesión de licencias. Para servir mejor a nuestra comunidad, ofrecemos algunas clases
-                para quienes el español es su idioma principal.</p>
-              <p><em>Clase de 3 Fallas/Clase del Manual del Conductor</em>
-                Esta clase es para aquellos que están tratando de obtener un permiso de aprendiz y no han logrado
-                pasar la parte de los signos de la prueba o el conocimiento general. Esta es también la clase para
-                aquellos que han fallado su prueba 3 veces al intentar restablecer una licencia de conducir de
-                Virginia suspendida o vencida.</p>
-              <p><em>Examen Practico del DMV/ Clase de Bypass/evitar el DMV</em> ADJ Driver Improvement Center es un
-                centro de pruebas de terceros para el DMV. Esta clase ayuda con el proceso de convertir un permiso de
-                aprendiz de Virginia en una licencia de conducir. La finalización de esta clase le permite realizar
-                pruebas con nuestro instructor en su idioma principal y evitar
-                tener que tomar su Examen final de habilidades en carretera en el DMV. Esta clase también le permite
-                omitir el período de retención de 60 días en un permiso de aprendizaje.</p>
-              <p> Para obtener más información, comuníquese con nuestro instructor que habla español, Sr. Jean
-                Carminati al<a href="tel:+15712851521" id="spanish_a_tag">
-                  <label class="label_no_padding">571 285-1521</label></a>
-                </a>Si no está disponible para responder, deje un mensaje y rápidamente le devolverá la llamada.</p>
-              <p>NO OFRECEMOS clases de CDL o Motocicleta</p>
+                  <p>La Escula de Manejo ADJ en Woodbridge ofrece todas las clases para ayudar a las personas con el
+                    proceso de concesión de licencias. Para servir mejor a nuestra comunidad, ofrecemos algunas clases
+                    para quienes el español es su idioma principal.</p>
+                  <p><em>Clase de 3 Fallas/Clase del Manual del Conductor</em>
+                    Esta clase es para aquellos que están tratando de obtener un permiso de aprendiz y no han logrado
+                    pasar la parte de los signos de la prueba o el conocimiento general. Esta es también la clase para
+                    aquellos que han fallado su prueba 3 veces al intentar restablecer una licencia de conducir de
+                    Virginia suspendida o vencida.</p>
+                  <p><em>Examen Practico del DMV/ Clase de Bypass/evitar el DMV</em> ADJ Driver Improvement Center es un
+                    centro de pruebas de terceros para el DMV. Esta clase ayuda con el proceso de convertir un permiso
+                    de
+                    aprendiz de Virginia en una licencia de conducir. La finalización de esta clase le permite realizar
+                    pruebas con nuestro instructor en su idioma principal y evitar
+                    tener que tomar su Examen final de habilidades en carretera en el DMV. Esta clase también le permite
+                    omitir el período de retención de 60 días en un permiso de aprendizaje.</p>
+                  <p> Para obtener más información, comuníquese con nuestro instructor que habla español, Sr. Jean
+                    Carminati al<a href="tel:+15712851521" id="spanish_a_tag">
+                      <label class="label_no_padding">571 285-1521</label></a>
+                    </a>Si no está disponible para responder, deje un mensaje y rápidamente le devolverá la llamada.</p>
+                  <p>NO OFRECEMOS clases de CDL o Motocicleta</p>
 
-              <div>
-                <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Registrarse
-                    para la clase</a></h2>
+                  <div>
+                    <h2 class="calendar"><a
+                        href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Registrarse
+                        para la clase</a></h2>
+                  </div>
+
+                </div>
+              </div>
+
+              <div class="card class_card" id="in-car">
+                <img class="card-img-top classes_images"
+                  src="/images/iconfinder_Driver_License-Id-License-Transport-Identification_5917197.png"
+                  alt="Card image cap">
+                <div class="card-body">
+                  <h3>In-Car Driver Training</h3>
+                  <p>At ADJ Driving School in Woodbridge, VA, we provide in-car training for both adults & teenagers.
+                    With these classes, our main goal is to prepare you for driving in one of the most populated areas
+                    in
+                    the country.
+                    The Virginia DMV separates these drivers into two categories and the requirements for each are very
+                    different.
+                  </p>
+                  <p>Teenagers (Minors) Age 15- 17
+                    These students are required to hold a learners permit for 9 months, and are required to take both
+                    the
+                    36 period classroom component of driver education as well as the 14 period in-car component.
+                  </p>
+                  <p>The Classroom component is usually offered in public school during 10th grade health/P.E. Upon
+                    completion of this class you must also complete a 90- minute seminar with a parent. Once you have
+                    completed these two requirements you should be issued a “PINK Classroom Completion Certificate”.
+                    ***You must have your “PINK Classroom Completion Certificate” in hand to start the In-Car/Behind the
+                    Wheel portion.***
+                    The Behind the Wheel/In-Car portion of Driver Education must contain 7 – 50 minute periods of
+                    driving
+                    and 7 – 50 minute periods of observation. Each student receives 1 – 50 minute period of driving and
+                    1-50 minute period of observation per session. The class will usually be comprised of 7 -2 hour
+                    classes. The price of Behind The Wheel for teenagers is $275.00. If you have a question, please do
+                    not
+                    hesitate to call our office at 703 730-8525.
+                  </p>
+                  <p>Adults – Age 18 & Older
+                    If you are interested in receiving some instructional driving or would like to take (what is
+                    typically
+                    referred to as a Bypass-Class), we do offer these services as well. Students 18 & older are
+                    typically
+                    required to hold a Learners Permit for 60 days. The only exception to this rule is to complete a
+                    Bypass
+                    Class/Adult Waiver Class.
+                  </p>
+                  <p>Instructional Driving
+                    This is a package deal that will help to prepare you for your Final Road Examination/Driving Test at
+                    the DMV. We offer SIX hours of instruction for $275.00 or EIGHT hours of instruction for $350.00.
+                    These
+                    classes will typically be broken up into 4-6 lessons of about 1.5 hours per lesson.
+                  </p>
+                  <p>Bypass Class
+                    If you would like to Bypass the 60 Day holding for a learners permit or just avoid having to take
+                    your
+                    final road examination at the DMV you must complete the same requirements of driver education that a
+                    teenager would need to complete. This class consists of 12 hours of one on one instruction, as well
+                    as
+                    our instructor providing the Final Road Examination. When the student completes the required time
+                    and
+                    road test successfully, they will be issued a DMV Adult Waiver. The DMV Adult Waiver allows you to
+                    avoid holding your learners permit for 60 days as well as avoiding the final road examination at the
+                    DMV. The cost of this class is $450.00. If you have any questions, please don not hesitate to call
+                    our
+                    office at 703 730-8525.
+                  </p>
+                  <div>
+                    <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Register
+                        for
+                        class</a></h2>
+                  </div>
+                </div>
+              </div>
+
+
+
+              <div class="container" id="copyright_cpg">
+                <div class="row">
+
+                  <div class="col-6">
+                    <a href="/">© 2022 ADJ Driver Improvement Center</a>
+                    <br>
+                    <a href="http://www.cpgdev.net">cpg development</a>
+                  </div>
+                  <div class="col-2">
+                    <a href="https://www.twitter.com/ADJ_Woodbridge">
+                      <i class="fa fa-twitter fa-3x"></i>
+                    </a>
+                  </div>
+                  <div class="col-2">
+                    <a href="https://www.linkedin.com/in/adj-driver-improvement-center-632196b5">
+                      <i class="fa fa-linkedin fa-3x"></i>
+                    </a>
+                  </div>
+                  <div class="col-2">
+                    <a href="https://www.facebook.com/ADJ-Driver-Improvement-Center-181645525214421/">
+                      <i class="fa fa-facebook fa-3x"></i>
+                    </a>
+                  </div>
+
+                </div>
               </div>
 
             </div>
-          </div>
-
-          <div class="card class_card" id="in-car">
-            <img class="card-img-top classes_images"
-              src="/images/iconfinder_Driver_License-Id-License-Transport-Identification_5917197.png"
-              alt="Card image cap">
-            <div class="card-body">
-              <h3>In-Car Driver Training</h3>
-              <p>At ADJ Driving School in Woodbridge, VA, we provide in-car training for both adults & teenagers.
-                With these classes, our main goal is to prepare you for driving in one of the most populated areas in
-                the country.
-                The Virginia DMV separates these drivers into two categories and the requirements for each are very
-                different.
-              </p>
-              <p>Teenagers (Minors) Age 15- 17
-                These students are required to hold a learners permit for 9 months, and are required to take both the
-                36 period classroom component of driver education as well as the 14 period in-car component.
-              </p>
-              <p>The Classroom component is usually offered in public school during 10th grade health/P.E. Upon
-                completion of this class you must also complete a 90- minute seminar with a parent. Once you have
-                completed these two requirements you should be issued a “PINK Classroom Completion Certificate”.
-                ***You must have your “PINK Classroom Completion Certificate” in hand to start the In-Car/Behind the
-                Wheel portion.***
-                The Behind the Wheel/In-Car portion of Driver Education must contain 7 – 50 minute periods of driving
-                and 7 – 50 minute periods of observation. Each student receives 1 – 50 minute period of driving and
-                1-50 minute period of observation per session. The class will usually be comprised of 7 -2 hour
-                classes. The price of Behind The Wheel for teenagers is $275.00. If you have a question, please do not
-                hesitate to call our office at 703 730-8525.
-              </p>
-              <p>Adults – Age 18 & Older
-                If you are interested in receiving some instructional driving or would like to take (what is typically
-                referred to as a Bypass-Class), we do offer these services as well. Students 18 & older are typically
-                required to hold a Learners Permit for 60 days. The only exception to this rule is to complete a Bypass
-                Class/Adult Waiver Class.
-              </p>
-              <p>Instructional Driving
-                This is a package deal that will help to prepare you for your Final Road Examination/Driving Test at
-                the DMV. We offer SIX hours of instruction for $275.00 or EIGHT hours of instruction for $350.00. These
-                classes will typically be broken up into 4-6 lessons of about 1.5 hours per lesson.
-              </p>
-              <p>Bypass Class
-                If you would like to Bypass the 60 Day holding for a learners permit or just avoid having to take your
-                final road examination at the DMV you must complete the same requirements of driver education that a
-                teenager would need to complete. This class consists of 12 hours of one on one instruction, as well as
-                our instructor providing the Final Road Examination. When the student completes the required time and
-                road test successfully, they will be issued a DMV Adult Waiver. The DMV Adult Waiver allows you to
-                avoid holding your learners permit for 60 days as well as avoiding the final road examination at the
-                DMV. The cost of this class is $450.00. If you have any questions, please don not hesitate to call our
-                office at 703 730-8525.
-              </p>
-              <div>
-                <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Register for
-                    class</a></h2>
-              </div>
-            </div>
-          </div>
-
-
-
-          <div class="container" id="copyright_cpg">
-            <div class="row">
-
-              <div class="col-6">
-                <a href="/">© 2022 ADJ Driver Improvement Center</a>
-                <br>
-                <a href="http://www.cpgdev.net">cpg development</a>
-              </div>
-              <div class="col-2">
-                <a href="https://www.twitter.com/ADJ_Woodbridge">
-                  <i class="fa fa-twitter fa-3x"></i>
-                </a>
-              </div>
-              <div class="col-2">
-                <a href="https://www.linkedin.com/in/adj-driver-improvement-center-632196b5">
-                  <i class="fa fa-linkedin fa-3x"></i>
-                </a>
-              </div>
-              <div class="col-2">
-                <a href="https://www.facebook.com/ADJ-Driver-Improvement-Center-181645525214421/">
-                  <i class="fa fa-facebook fa-3x"></i>
-                </a>
-              </div>
-
-            </div>
-          </div>
-
-        </div>
 
 </body>
 
