add online driver improvement class

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,7 +86,7 @@
         </div>
       </div>
 
-      <!-- <div class="container">
+      <div class="container">
         <div class="row" id="second_row">
           <div class="col class_cards">
             <a href="/classes/#online" class="card index_page_card">
@@ -113,14 +113,14 @@
               </a>
             </div>
           </div>
-        </div> -->
+        </div>
 
       <div class="container">
         <div class="row" id="fourth_row">
           <div class="col class_cards">
             <a href="/classes/#3-times" class="card index_page_card">
               <img src="/images/driver-manual-icon.png" class="icons" alt="logo" />
-              <h3>Failed DMV Test 3 Times Class/Permit Class On-Line</h3>
+              <h3>DMV 3 Failures/Permit Class</h3>
               <p>Learn more</p>
             </a>
           </div>
