revert to old index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,15 +63,15 @@
         </div>
       </div>
 
-      <!-- <div class="container">
-      <div class="row">
-        <div class="col">
-          <h3 id="choose_class">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h3 id="choose_class">
               Choose a class
-          </h3>
+            </h3>
+          </div>
         </div>
       </div>
-    </div> -->
 
       <div class="container">
         <div class="row" id="first_row">
@@ -97,23 +97,19 @@
             </a>
           </div>
         </div>
-      </div> -->
+      </div>
 
-      <!-- <div class="container">
-          <div class="row" id="third_row">
-            <div class="col class_cards">
-              <a href="/classes/#reckless" class="card index_page_card">
-                <img
-                  src="/images/iconfinder_stress-bomb-pressure-strain-mad_4383933.png"
-                  class="icons"
-                  alt="logo"
-                />
-                <h3>4-hour Reckless/Aggressive Class</h3>
-                <p>Learn more</p>
-              </a>
-            </div>
+      <div class="container">
+        <div class="row" id="third_row">
+          <div class="col class_cards">
+            <a href="/classes/#reckless" class="card index_page_card">
+              <img src="/images/iconfinder_stress-bomb-pressure-strain-mad_4383933.png" class="icons" alt="logo" />
+              <h3>4-hour Reckless/Aggressive Class</h3>
+              <p>Learn more</p>
+            </a>
           </div>
         </div>
+      </div>
 
       <div class="container">
         <div class="row" id="fourth_row">
