--- a/views/index.ejs
+++ b/views/index.ejs
@@ -116,7 +116,7 @@
           <div class="col class_cards">
             <a href="/classes/#3-times" class="card index_page_card">
               <img src="/images/driver-manual-icon.png" class="icons" alt="logo" />
-              <h3>DMV 3 Failures/Permit Class</h3>
+              <h3>Failed DMV Test 3 Times Class/Permit Class On-Line</h3>
               <p>Learn more</p>
             </a>
           </div>
