--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -105,6 +105,9 @@
               src="/images/iconfinder_online_course_teaching-study-class-learning_5867932.png" alt="Card image cap">
             <div class="card-body">
               <h3>Online Driver Improvement Class</h3>
+              <p>
+                Our class is approved for all ages by the Virginia DMV.
+              </p>
               <p>ADJ Driver Improvement Center in Woodbridge, Virginia offers a convenient online Driver Improvement
                 Clinic that is approved by the Virginia Department of Motor Vehicles and accepted by all courts that
                 will allow online classes. Taking your Driver Improvement Course with us ensures that your traffic
@@ -113,27 +116,32 @@
                   WHEREVER and WHENEVER you please, then complete the test ONLINE and receive your completion
                   certificate.</em> </p>
               <p>Our online driver improvement class works on all devices for added convenience.</p>
-              <p>Our class is a flat fee of $65.00 (no taxes and no extra “certificate or processing fees”), and can be
-                paid using PayPal.</p>
+              <p>Our class is a flat fee of $65.00 (no taxes and no extra “certificate or processing fees”) and can be
+                paid using PayPal. You do not need a PayPal account, you are able to use any credit or debit card by
+                selecting “Pay with Credit or Debit Card”.</p>
               <p>We notify DMV of all Voluntary and DMV mandated class completions. Completion is electronically filed
-                with-in 24 hours. Completion can not be filed until the test is completed and the class is paid for
-                using PayPal. If you are unable to use PayPal, you can make an appointment to pay in person at our
-                Woodbridge, VA office.</p>
-              <p>It is your responsibility to determine if your court accepts this computer-based Driver Improvement
+                with-in 24 hours. Completion cannot be filed until the test is completed and the class is paid for using
+                PayPal.
+              </p>
+              <p>
+                If you do not pass your final exam, DMV requires a 24 wait until you may test again. There are no
+                additional fees for re-testing.
+              </p>
+              <!-- <p>It is your responsibility to determine if your court accepts this computer-based Driver Improvement
                 Course to satisfy a court required Driver Improvement Course. All Northern VA courts are accepting
                 online completions at this time.</p>
               <p>If you do not pass your final exam, DMV requires a 24 wait until you may test again. There are no
                 additional fees for re-testing.</p> -->
 
 
-              <p>Pay attention and study up! Exams are NOT open book.</p>
+              <!-- <p>Pay attention and study up! Exams are NOT open book.</p>
               <p>We cannot issue a completion certificate or any other paperwork until you have passed your final exam.
               </p>
               <p>If you do not pass your final exam, DMV requires a 24 wait until you may test again. There are no
                 additional fees for re-testing.</p>
               <p><em>If you are under age 20, this computer-based Driver Improvement Clinic WILL NOT satisfy a Driver
                   Improvement Clinic requirement.</em></p>
-              <p><em>You must satisfactorily complete a clinic that provides classroom instruction.</em></p>
+              <p><em>You must satisfactorily complete a clinic that provides classroom instruction.</em></p> -->
               <br>
               <div>
                 <h2 class="calendar"><a href="https://www.va-drivercourses.com/clickIn.php?school=59">Start Now</a></h2>
@@ -254,8 +262,8 @@
               <p>If you have any questions, please do not hesitate to give us a call!
               </p>
               <div>
-                <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">View
-                    Schedule</a></h2>
+                <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Register for
+                    class</a></h2>
               </div>
             </div>
           </div>
