--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,7 +99,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <!-- <div class="container">
         <div class="row" id="third_row">
           <div class="col class_cards">
             <a href="/classes/#reckless" class="card index_page_card">
@@ -109,7 +109,7 @@
             </a>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="container">
         <div class="row" id="fourth_row">
