--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,9 +22,10 @@
 <body>
   <div class="container" id="header">
     <div class="row">
+      <div class="col"></div>
       <div class="col" id="col_1">
         <a href="tel:+17037308525">
-          <label>Contact Us</label>
+          <label>Call</label>
         </a>
       </div>
 
@@ -37,9 +38,10 @@
 
       <div class="col" id="col_3">
         <a href="mailto:adj23@comcast.net">
-          <label id="email_header">Email Us</label>
+          <label id="email_header">Email</label>
         </a>
       </div>
+      <div class="col"></div>
 
       <!-- <div></div> -->
 
@@ -92,7 +94,7 @@
             <a href="/classes/#online" class="card index_page_card">
               <img src="/images/iconfinder_online_course_teaching-study-class-learning_5867932.png" class="icons"
                 alt="logo" />
-              <h3>Online Driver Improvement Class</h3>
+              <h3>On-line Driver Improvement Class</h3>
               <p>Learn more</p>
             </a>
           </div>
