--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -186,8 +186,8 @@
                 <li>
                   <p>
                     3. Once payment is made for the class, we will send you a link so you can register and access
-                    theclass
-                    anytime you like. The class is available for you to access 24 hours a day so that you maycomplete
+                    the class
+                    anytime you like. The class is available for you to access 24 hours a day so that you may complete
                     sections of the class whenever you are able to.
                   </p>
                 </li>
@@ -376,34 +376,34 @@
           </div>
 
 
+ <!-- footer -->
+ <div class="container" id="copyright_cpg">
+  <div class="row">
 
-          <div class="container" id="copyright_cpg">
-            <div class="row">
+    <div class="col-6">
+      <a href="/">© 2024 ADJ Driver Improvement Center</a>
+      <br>
+      <a href="https://cpg.dev/">cpg development</a>
+    </div>
+    <div class="col-2">
+      <a href="https://www.twitter.com/ADJ_Woodbridge">
+        <i class="fa fa-twitter fa-3x"></i>
+      </a>
+    </div>
+    <div class="col-2">
+      <a href="https://www.linkedin.com/in/adj-driver-improvement-center-632196b5">
+        <i class="fa fa-linkedin fa-3x"></i>
+      </a>
+    </div>
+    <div class="col-2">
+      <a href="https://www.facebook.com/ADJ-Driver-Improvement-Center-181645525214421/">
+        <i class="fa fa-facebook fa-3x"></i>
+      </a>
+    </div>
 
-              <div class="col-6">
-                <a href="/">© 2022 ADJ Driver Improvement Center</a>
-                <br>
-                <a href="http://www.cpgdev.net">cpg development</a>
-              </div>
-              <div class="col-2">
-                <a href="https://www.twitter.com/ADJ_Woodbridge">
-                  <i class="fa fa-twitter fa-3x"></i>
-                </a>
-              </div>
-              <div class="col-2">
-                <a href="https://www.linkedin.com/in/adj-driver-improvement-center-632196b5">
-                  <i class="fa fa-linkedin fa-3x"></i>
-                </a>
-              </div>
-              <div class="col-2">
-                <a href="https://www.facebook.com/ADJ-Driver-Improvement-Center-181645525214421/">
-                  <i class="fa fa-facebook fa-3x"></i>
-                </a>
-              </div>
-
-            </div>
-          </div>
-
+  </div>
+</div>
+<!-- end footer -->
         </div>
 
 </body>
