--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,10 +57,8 @@
         <div class="row">
           <div class="col-12" id="adj">
             <h1>ADJ</h1>
-            <!-- <br /> -->
             <h2>Driver Improvement Center</h2>
-            <!-- <br /> -->
-            <h4 class="description">Serving Northern Virginia since 1999</h4>
+            <h4 class="description" id="servingNOVA">Serving Northern Virginia since 1999</h4>
           </div>
         </div>
       </div>
@@ -75,7 +73,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <!-- <div class="container">
         <div class="row" id="first_row">
           <div class="col class_cards">
             <a href="/classes" class="card index_page_card">
@@ -86,7 +84,7 @@
             </a>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="container">
         <div class="row" id="second_row">
@@ -125,7 +123,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <!-- <div class="container">
         <div class="row" id="fifth_row">
           <div class="col class_cards">
             <a href="/classes/#espanol" class="card index_page_card">
@@ -135,9 +133,9 @@
             </a>
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="container">
+      <!-- <div class="container">
         <div class="row" id="sixth_row">
           <div class="col class_cards">
             <a href="/classes/#in-car" class="card index_page_card">
@@ -148,7 +146,7 @@
             </a>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="container footer">
         <div class="row">
@@ -164,12 +162,14 @@
         </div>
       </div>
 
+      <!-- footer -->
       <div class="container" id="copyright_cpg">
         <div class="row">
+
           <div class="col-6">
-            <a href="/">© 2023 ADJ Driver Improvement Center</a>
-            <br />
-            <a href="http://www.cpgdev.net">cpg development</a>
+            <a href="/">© 2024 ADJ Driver Improvement Center</a>
+            <br>
+            <a href="https://cpg.dev/">cpg development</a>
           </div>
           <div class="col-2">
             <a href="https://www.twitter.com/ADJ_Woodbridge">
@@ -186,7 +186,10 @@
               <i class="fa fa-facebook fa-3x"></i>
             </a>
           </div>
+
         </div>
+      </div>
+<!-- end footer -->
       </div>
 
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
