--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -49,7 +49,7 @@
         <h1 class="display-5" id="class-page-header">ADJ Classes</h1>
         <div class="grid">
 
-          <div class="card class_card">
+          <!-- <div class="card class_card">
             <img class="card-img-top classes_images"
               src="/images/iconfinder_Speeding_Ticket-speed-policing-law-enforcement_4498991.png" alt="Card image cap">
             <div class="card-body">
@@ -95,7 +95,7 @@
               <div>
                 <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Register for
                     class</a></h2>
-              </div>
+              </div> -->
 
             </div>
           </div>
@@ -268,7 +268,7 @@
             </div>
           </div> -->
 
-          <div class="card class_card" id="espanol">
+          <!-- <div class="card class_card" id="espanol">
             <img class="card-img-top classes_images" src="/images/iconfinder_83_4863661.png" alt="Card image cap">
             <div class="card-body">
               <h3>Clases en Español</h3>
@@ -305,9 +305,9 @@
               </div>
 
             </div>
-          </div>
+          </div> -->
 
-          <div class="card class_card" id="in-car">
+          <!-- <div class="card class_card" id="in-car">
             <img class="card-img-top classes_images"
               src="/images/iconfinder_Driver_License-Id-License-Transport-Identification_5917197.png"
               alt="Card image cap">
@@ -373,7 +373,7 @@
                     class</a></h2>
               </div>
             </div>
-          </div>
+          </div> -->
 
 
  <!-- footer -->
