add paypal link

--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -174,35 +174,23 @@
 
               <ol>
                 <li>
-                  <p>1. The first step is to register for the class by clicking “Register for class” at the bottom of
-                    this
-                    section.
-                  </p>
-                </li>
-                <li>
-                  <p>2. As soon as we receive your registration, we will send you a link to make your payment.
+                  <p>Choose “Register for class” at the bottom of
+                    this section to complete your payment.
                   </p>
                 </li>
                 <li>
                   <p>
-                    3. Once payment is made for the class, we will send you a link so you can register and access
-                    the class
-                    anytime you like. The class is available for you to access 24 hours a day so that you may complete
-                    sections of the class whenever you are able to.
+                    Once payment is submitted, you will receive a link from ADJ within 2 days, giving you access to the class. The class can be completed anytime.
                   </p>
                 </li>
               </ol>
 
               </p>
-              <p>As soon as your class is completed, we will send your completion certificate to your email as a PDF.
-                This
-                PDF must be downloaded to a computer or flash drive then printed. You can then take this certificate to
-                the DMV and resume testing for your Learners Permit/License. At this point you will have as many
-                opportunities to pass the test as needed.
+              <p>Once your class is completed, ADJ will send you your certificate of completion via email in PDF format. Download the PDF to a computer or flash drive and print the certificate. You can then take the certificate to the DMV and resume testing for your Learners Permit/License. At this point you will have as many opportunities to pass the test as needed.
               </p>
 
               <p>
-                The cost of the class is a flat fee of $125.00 (no additional fees or taxes)
+                The cost of the class is a one-time payment of $125.00 with no additional fees or taxes.
               </p>
               <p>
                 We use PayPal to collect on-line payments, but you do not need a PayPal account. You can use any credit
@@ -229,7 +217,7 @@
                 business, and your calls are answered by the staff of ADJ Driver Improvement Center.
               </h3>
               <div>
-                <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Register for
+                <h2 class="calendar"><a href="https://www.paypal.com/ncp/payment/57YVFFQ63FLTC">Register for
                     class</a></h2>
               </div>
 
